--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="demo_viewpager_dot">展示ViewPager和點點</string>
     <string name="demo_grid">方格狀呈現列表</string>
     <string name="demo_entry">好看的入口頁面</string>
+    <string name="spinner_test">Spinner測試</string>
 
     <string name="title_activity_navigetion_drawer">NavigetionDrawerActivity</string>
 
