--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="take_picture">拍照</string>
+    <string name="pick_picture">選擇照片</string>
+    <string name="take_pic_permission_explain">此功能需要您給予拍照權限與SD card存取權限</string>
+    <string name="choose_pic_permission_explain">此功能需要您給予SD card存取權限</string>
+    <string name="got_it">知道了</string>
 </resources>
